Fix css style for hover text on violin plot not visible and added alert for invalid key param in hover template pattern

--- a/src/assets/scss/_plot.scss
+++ b/src/assets/scss/_plot.scss
@@ -85,4 +85,9 @@
     align-items: center;
     margin-right: 4px;
   }
+  
+  //To add custom styling for study violin plot hover text to improve readability of link inside the hover text
+  .main-svg .hoverlayer .hovertext text a {
+    fill: inherit;
+  }
 }
